--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -59,9 +59,10 @@
             </div>
 
             <div>
-                <img src="img/spinner.gif" class="pull-right" id="anki-spinner" alt>
-
-                <h3>Anki Options</h3>
+                <div>
+                    <img src="img/spinner.gif" class="pull-right" id="anki-spinner" alt>
+                    <h3>Anki Options</h3>
+                </div>
 
                 <div class="alert alert-danger" id="anki-error">
                     <strong>Error:</strong>
