--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -3,6 +3,7 @@
 <body>
     <script src="../lib/handlebars.min.js"></script>
     <script src="../lib/dexie.min.js"></script>
+    <script src="../lib/wanakana.min.js"></script>
     <script src="js/ankiweb.js"></script>
     <script src="js/ankiconnect.js"></script>
     <script src="js/ankinull.js"></script>
