Adding soft katakana search option

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -32,6 +32,10 @@
                 </div>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="enable-soft-katakana-search"> Enable soft Katakana search</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
             </div>
