--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -63,6 +63,13 @@
             </div>
 
             <div>
+                <h3>Dictionaries</h3>
+
+                <div name="dictionaries">
+                </div>
+            </div>
+
+            <div>
                 <div>
                     <img src="img/spinner.gif" class="pull-right" id="anki-spinner" alt>
                     <h3>Anki Options</h3>
