--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -65,7 +65,7 @@
             <div>
                 <h3>Dictionaries</h3>
 
-                <div name="dictionaries">
+                <div class="dictionaries">
                 </div>
             </div>
 
