--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -8,14 +8,10 @@
         </div>
     </div>
 
-    {{#if hasTerms}}
-    <div class="checkbox">
-        <label><input type="checkbox" class="dict-enable-terms"> Enable term search</label>
+    <div class="checkbox {{#unless hasTerms}}disabled{{/unless}}">
+        <label><input type="checkbox" class="dict-enable-terms" {{#unless hasTerms}}disabled{{/unless}} {{#if enableTerms}}checked{{/if}}> Enable term search</label>
     </div>
-    {{/if}}
-    {{#if hasKanji}}
-    <div class="checkbox">
-        <label><input type="checkbox" class="dict-enable-kanji"> Enable Kanji search</label>
+    <div class="checkbox {{#unless hasKanji}}disabled{{/unless}}">
+        <label><input type="checkbox" class="dict-enable-kanji" {{#unless hasKanji}}disabled{{/unless}} {{#if enableKanji}}checked{{/if}}> Enable Kanji search</label>
     </div>
-    {{/if}}
 </div>
