Save dictionary options

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -65,25 +65,7 @@
             <div>
                 <h3>Dictionaries</h3>
 
-                <div class="dictionaries">
-                    <div class="dictionary well well-sm">
-                        <div class="row">
-                            <div class="col-xs-8">
-                                <h4><span class="text-muted glyphicon glyphicon-book"></span> Dictionary <small>v.1</small></h4>
-                            </div>
-                            <div class="col-xs-4 text-right">
-                                <button type="button" class="dict-delete btn btn-danger">Delete</button>
-                            </div>
-                        </div>
-
-                        <div class="checkbox">
-                            <label><input type="checkbox" class="dict-enable-terms"> Enable term search</label>
-                        </div>
-                        <div class="checkbox">
-                            <label><input type="checkbox" class="dict-enable-kanji"> Enable Kanji search</label>
-                        </div>
-                    </div>
-                </div>
+                <div class="dictionaries"></div>
 
                 <div class="alert alert-danger" id="dict-error">
                     <strong>Error:</strong>
