--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -1,4 +1,4 @@
-<div class="dictionary well well-sm" data-name="{{name}}">
+<div class="dict well well-sm" data-name="{{name}}">
     <div class="row">
         <div class="col-xs-8">
             <h4><span class="text-muted glyphicon glyphicon-book"></span> {{name}} <small>v.{{version}}</small></h4>
