--- a/ext/bg/import.html
+++ b/ext/bg/import.html
@@ -39,7 +39,7 @@
 
                 <p>
                     Please read the steps outlined below to get quickly get up and running with Yomichan. For complete documentation,
-                    visit the <a href="https://foosoft.net/projects/yomichan-chrome/">official homepage</a>.
+                    visit the <a href="https://foosoft.net/projects/yomichan-chrome/" target="_blank">official homepage</a>.
                 </p>
 
                 <ol>
