--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -1,7 +1,7 @@
-<div class="dict well well-sm" data-name="{{name}}">
+<div class="dict well well-sm" data-title="{{title}}">
     <div class="row">
         <div class="col-xs-8">
-            <h4><span class="text-muted glyphicon glyphicon-book"></span> {{name}} <small>v.{{version}}</small></h4>
+            <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
         </div>
         <div class="col-xs-4 text-right">
             <button type="button" class="dict-delete btn btn-danger">Delete</button>
