--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -9,7 +9,7 @@
     <script src="js/ankinull.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/util.js"></script>
-    <script src="js/dictionary.js"></script>
+    <script src="js/database.js"></script>
     <script src="js/deinflector.js"></script>
     <script src="js/translator.js"></script>
     <script src="js/options.js"></script>
