--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -69,11 +69,11 @@
 
                 <div class="alert alert-danger" id="dict-error">
                     <strong>Error:</strong>
-                    <span>Something went wrong!</span>
+                    <span></span>
                 </div>
 
                 <div class="progress" id="dict-import-progress">
-                    <div id="dict-import-progress-value" class="progress-bar progress-bar-striped" style="width: 45%"></div>
+                    <div class="progress-bar progress-bar-striped" style="width: 0%"></div>
                 </div>
 
                 <div class="input-group" id="dict-import">
@@ -84,7 +84,7 @@
                             <li><a href="#" data-url="enamdict">JMnedict</a></li>
                             <li><a href="#" data-url="kanjidic">KANJIDIC2</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#" data-url="http://localhost:9876">Local dictionary</a></li>
+                            <li><a href="#" data-url="http://localhost:9876/index.json">Local dictionary</a></li>
                         </ul>
                     </div>
                     <input type="text" id="dict-import-url" class="form-control" placeholder="Dictionary import URL">
