--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -3,7 +3,7 @@
         <div class="col-xs-8">
             <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
         </div>
-        <div class="col-xs-4 text-right">
+        <div class="col-xs-4 text-right disabled">
             <button type="button" class="dict-delete btn btn-danger">Delete</button>
         </div>
     </div>
