--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
-            #anki-spinner, #anki-general, #anki-error, #dict-error, #dict-import-progress, #options-advanced {
+            #anki-spinner, #anki-general, #anki-error, #dict-error, #dict-progress, #dict-laggy, #options-advanced {
                 display: none;
             }
 
@@ -65,18 +65,22 @@
             <div>
                 <h3>Dictionaries</h3>
 
-                <div class="dicts"></div>
+                <div class="dict-groups"></div>
 
                 <div class="alert alert-danger" id="dict-error">
                     <strong>Error:</strong>
                     <span></span>
                 </div>
 
-                <div class="progress" id="dict-import-progress">
+                <div class="alert alert-warning" id="dict-laggy">
+                    The dictionary database appears to be busy; please wait for currently executing tasks to complete.
+                </div>
+
+                <div class="progress" id="dict-progress">
                     <div class="progress-bar progress-bar-striped" style="width: 0%"></div>
                 </div>
 
-                <div class="input-group" id="dict-import">
+                <div class="input-group" id="dict-importer">
                     <div class="input-group-btn">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
                         <ul class="dropdown-menu">
@@ -87,9 +91,9 @@
                             <li><a href="#" data-url="http://localhost:9876/index.json">Local dictionary</a></li>
                         </ul>
                     </div>
-                    <input type="text" id="dict-import-url" class="form-control" placeholder="Dictionary import URL">
+                    <input type="text" id="dict-url" class="form-control" placeholder="Dictionary import URL">
                     <div class="input-group-btn disabled">
-                        <button type="button" id="dict-import-start" class="btn btn-primary" disabled>Import</button>
+                        <button type="button" id="dict-import" class="btn btn-primary" disabled>Import</button>
                     </div>
                 </div>
             </div>
