--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -1,4 +1,4 @@
-<div class="dict well well-sm" data-title="{{title}}">
+<div class="dict-group well well-sm" data-title="{{title}}">
     <div class="row">
         <div class="col-xs-8">
             <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
