--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -65,7 +65,7 @@
             <div>
                 <h3>Dictionaries</h3>
 
-                <div class="dict-groups"></div>
+                <div id="dict-groups"></div>
 
                 <div class="alert alert-danger" id="dict-error">
                     <strong>Error:</strong>
