--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
-            #anki-spinner, #anki-general, #anki-error, #dict-error, #dict-progress, #dict-laggy, #options-advanced {
+            #anki-spinner, #anki-general, #anki-error, #dict-error, #dict-import-progress, #dict-delete-progress, #dict-laggy, #options-advanced {
                 display: none;
             }
 
@@ -76,7 +76,7 @@
                     The dictionary database appears to be busy; please wait for currently executing tasks to complete.
                 </div>
 
-                <div class="progress" id="dict-progress">
+                <div class="progress" id="dict-import-progress">
                     <div class="progress-bar progress-bar-striped" style="width: 0%"></div>
                 </div>
 
