--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
-            #anki-spinner, #anki-general, #anki-error, #dict-error, #dict-import-progress, #dict-delete-progress, #dict-laggy, #options-advanced {
+            #anki-spinner, #anki-general, #anki-error, #dict-spinner, #dict-import-progress, #dict-delete-progress, #dict-laggy, #options-advanced {
                 display: none;
             }
 
@@ -65,15 +65,12 @@
             <div>
                 <h3>Dictionaries</h3>
 
+                <img src="img/spinner.gif" class="pull-right" id="dict-spinner" alt>
                 <div id="dict-groups"></div>
 
                 <div class="alert alert-danger" id="dict-error">
                     <strong>Error:</strong>
                     <span></span>
-                </div>
-
-                <div class="alert alert-warning" id="dict-laggy">
-                    The dictionary database appears to be busy; please wait for currently executing tasks to complete.
                 </div>
 
                 <div class="progress" id="dict-import-progress">
