--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
-            #anki-spinner, #anki-general, #anki-error, #dict-spinner, #dict-import-progress, #dict-delete-progress, #dict-laggy, #options-advanced {
+            #anki-spinner, #anki-general, #anki-error,
+            #dict-spinner, #dict-import-progress, .dict-delete-progress,
+            #options-advanced {
                 display: none;
             }
 
