--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -4,16 +4,16 @@
             <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
         </div>
         <div class="col-xs-4 text-right disabled">
-            <button type="button" class="dict-delete btn btn-danger">Delete</button>
+            <button type="button" class="dict-controls dict-delete btn btn-danger">Delete</button>
         </div>
     </div>
-    <div class="progress" id="dict-delete-progress">
+    <div class="progress dict-delete-progress">
         <div class="progress-bar progress-bar-striped progress-bar-danger" style="width: 0%"></div>
     </div>
-    <div class="checkbox {{#unless hasTerms}}disabled{{/unless}}">
+    <div class="checkbox dict-controls {{#unless hasTerms}}disabled{{/unless}}">
         <label><input type="checkbox" class="dict-enable-terms" {{#unless hasTerms}}disabled{{/unless}} {{#if enableTerms}}checked{{/if}}> Enable term search</label>
     </div>
-    <div class="checkbox {{#unless hasKanji}}disabled{{/unless}}">
+    <div class="checkbox dict-controls {{#unless hasKanji}}disabled{{/unless}}">
         <label><input type="checkbox" class="dict-enable-kanji" {{#unless hasKanji}}disabled{{/unless}} {{#if enableKanji}}checked{{/if}}> Enable Kanji search</label>
     </div>
 </div>
