--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -10,6 +10,7 @@
     <div class="progress dict-delete-progress">
         <div class="progress-bar progress-bar-striped progress-bar-danger" style="width: 0%"></div>
     </div>
+    <div class="dict-delete-progress">Deleting dictionary data, please be patient.</div>
     <div class="checkbox dict-controls {{#unless hasTerms}}disabled{{/unless}}">
         <label><input type="checkbox" class="dict-enable-terms" {{#unless hasTerms}}disabled{{/unless}} {{#if enableTerms}}checked{{/if}}> Enable term search</label>
     </div>
