--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -7,7 +7,7 @@
             <button type="button" class="dict-controls dict-delete btn btn-danger">Delete</button>
         </div>
     </div>
-    <div class="dict-delete-progress">Deleting dictionary data, please be patient.</div>
+    <div class="dict-delete-progress">Dictionary data is being deleted, please be patient...</div>
     <div class="progress dict-delete-progress">
         <div class="progress-bar progress-bar-striped progress-bar-danger" style="width: 0%"></div>
     </div>
