Revert "Delete dictionary deletion"
This reverts commit 0ff41d5843b3bf39994ae32e4ab623bfe0e4e3ca.

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
             #anki-spinner, #anki-general, #anki-error,
-            #dict-spinner, .dict-progress,
+            #dict-spinner, .dict-import-progress, .dict-delete-progress,
             #options-advanced {
                 display: none;
             }
@@ -75,8 +75,8 @@
                     <span></span>
                 </div>
 
-                <div class="dict-progress">Dictionary data is being imported, please be patient...</div>
-                <div class="progress dict-progress">
+                <div class="dict-import-progress">Dictionary data is being imported, please be patient...</div>
+                <div class="progress dict-import-progress">
                     <div class="progress-bar progress-bar-striped" style="width: 0%"></div>
                 </div>
 
