--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -2,14 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Yomichan Dictionary Import</title>
+        <title>Yomichan</title>
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
-        <style>
-            div.alert {
-                display: none;
-            }
-        </style>
     </head>
     <body>
         <div class="container">
@@ -18,21 +13,6 @@
             </div>
 
             <p>Thank you for downloading this extension! I sincerely hope that it will assist you on your language learning journey.</p>
-
-            <div>
-                <h2>Dictionary Import</h2>
-
-                <p>
-                    Before it can be used for the first time, Yomichan must import the Japanese dictionary data included with this extension. This process can take a
-                    couple of minutes to finish so please be patient! Please do not completely exit out of your browser until this process completes.
-                </p>
-
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped" style="width: 0%"></div>
-                </div>
-
-                <div class="alert alert-success">Dictionary import complete!</div>
-            </div>
 
             <div>
                 <h2>Quick Guide</h2>
@@ -51,8 +31,5 @@
                 </ol>
             </div>
         </div>
-
-        <script src="../lib/jquery-2.2.2.min.js"></script>
-        <script src="js/import.js"></script>
     </body>
 </html>
