--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
             #anki-spinner, #anki-general, #anki-error,
-            #dict-spinner, .dict-import-progress, .dict-delete-progress,
+            #dict-spinner, #dict-error, #dict-warning, .dict-import-progress, .dict-delete-progress,
             #options-advanced {
                 display: none;
             }
@@ -69,6 +69,11 @@
                 <h3>Dictionaries</h3>
 
                 <div id="dict-groups"></div>
+
+                <div class="alert alert-warning" id="dict-warning">
+                    <strong>No dictionaries found:</strong>
+                    please use the dropdown below to install packaged and external dictionaries
+                </div>
 
                 <div class="alert alert-danger" id="dict-error">
                     <strong>Error:</strong>
