--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -65,14 +65,23 @@
             </div>
 
             <div>
-                <img src="img/spinner.gif" class="pull-right" id="dict-spinner" alt>
-                <h3>Dictionaries</h3>
+                <div>
+                    <img src="img/spinner.gif" class="pull-right" id="dict-spinner" alt>
+                    <h3>Dictionaries</h3>
+                </div>
+
+                <p class="help-block">
+                    Yomichan can import both bundled and custom (see the <a href="https://foosoft.net/projects/yomichan-import">Yomichan Import</a>
+                    page for details) dictionaries. Although it is also possible to delete unneeded dictionaries, this operation is <em>extremely slow</em> and it is often
+                    easier to disable them or simply <a href="javascript:resetDatabase();">reset the database</a>. Finally, please make sure to
+                    wait for import and delete operations to complete before closing this page.
+                </p>
 
                 <div id="dict-groups"></div>
 
                 <div class="alert alert-warning" id="dict-warning">
                     <strong>No dictionaries found:</strong>
-                    please use the dropdown below to install packaged and external dictionaries
+                    <span>please use the dropdown below to install packaged and external dictionaries</span>
                 </div>
 
                 <div class="alert alert-danger" id="dict-error">
@@ -109,18 +118,19 @@
                     <h3>Anki Options</h3>
                 </div>
 
+                <p class="help-block">
+                    Yomichan features automatic flashcard creation for <a href="http://ankisrs.net/">Anki</a>, a free application
+                    designed to help you retain knowledge. While the <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin
+                    offers the best experience, it is also possible to create flashcards through <a href="https://ankiweb.net/">AnkiWeb</a>,
+                    provided you already have an account.
+                </p>
+
                 <div class="alert alert-danger" id="anki-error">
                     <strong>Error:</strong>
                     <span></span>
                 </div>
 
                 <div class="form-group">
-                    <p class="help-block">
-                        Yomichan features automatic flashcard creation for <a href="http://ankisrs.net/">Anki</a>, a free application
-                        designed to help you retain knowledge. While the <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin
-                        offers the best experience, it is also possible to create flashcards through <a href="https://ankiweb.net/">AnkiWeb</a>,
-                        provided you already have an account.
-                    </p>
                     <label for="anki-method">Connection method</label>
                     <select class="form-control" id="anki-method">
                         <option value="disabled">Disabled (no auto flashcard creation)</option>
