--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Yomichan</title>
+        <title>Welcome to Yomichan!</title>
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
     </head>
@@ -25,6 +25,7 @@
                 <ol>
                     <li>Left-click on the <img src="../img/icon16.png" alt> icon to enable or disable Yomichan for the current browser instance.</li>
                     <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan options page.</li>
+                    <li>Import any dictionaries (bundled or custom) you wish to use for Kanji and term searches.</li>
                     <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
                     <li>Resize the definitions window by dragging the bottom-left corner inwards or outwards.</li>
                     <li>Click on Kanji in the definition window to view additional information about that character.</li>
