--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -73,7 +73,7 @@
                 <p class="help-block">
                     Yomichan can import both bundled and custom (see the <a href="https://foosoft.net/projects/yomichan-import">Yomichan Import</a>
                     page for details) dictionaries. Although it is also possible to delete unneeded dictionaries, this operation is <em>extremely slow</em> and it is often
-                    easier to disable them or simply <a id="dict-purge">purge the database</a>. Please make sure to
+                    easier to disable them or simply <a href="#" id="dict-purge">purge the database</a>. Please make sure to
                     wait for import and delete operations to complete before closing this page.
                 </p>
 
