--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -23,7 +23,7 @@
 
     <div class="term-tags">
         {{#each tags}}
-        <span class="tag tag-{{class}}" title="{{desc}}">{{name}}</span>
+        <span class="tag tag-{{category}}" title="{{notes}}">{{tag}}</span>
         {{/each}}
     </div>
 
