--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -30,7 +30,7 @@
 
     <div class="kanji-tags">
         {{#each tags}}
-        <span class="tag tag-{{category}}" title="{{notes}}">{{tag}}</span>
+        <span class="tag tag-{{category}}" title="{{notes}}">{{name}}</span>
         {{/each}}
     </div>
 
