Don't show list numbering on glossary lists with only one item

--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -28,10 +28,16 @@
     </div>
 
     <div class="term-glossary">
+        {{#if glossary.[1]}}
         <ol>
             {{#each glossary}}
             <li><span>{{.}}</span></li>
             {{/each}}
         </ol>
+        {{else}}
+        <p>
+            {{glossary.[0]}}
+        </p>
+        {{/if}}
     </div>
 </div>
