--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -35,10 +35,16 @@
     </div>
 
     <div class="kanji-glossary">
+        {{#if glossary.[1]}}
         <ol>
             {{#each glossary}}
             <li><span>{{.}}</span></li>
             {{/each}}
         </ol>
+        {{else}}
+        <p>
+            {{glossary.[0]}}
+        </p>
+        {{/if}}
     </div>
 </div>
