Add donation button

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -213,6 +213,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div>
+                    <h3>Support Development</h3>
+
+                    <p class="help-block">
+                        If you find Yomichan useful, please consider making a small donation as a way to show your appreciation for the countless hours
+                        that I have devoted to this extension. Seeing that people care about my work is great motivation for continuing to
+                        improve Yomichan!
+                    </p>
+                    <p>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN"><img src="img/paypal.gif" alt></a>
+                    </p>
+                </div>
             </div>
 
             <div class="pull-right">
