--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -15,9 +15,9 @@
     <div class="term-expression">{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}</div>
     {{/if}}
 
-    <div class="term-rules">
-        {{#each rules}}
-        <span class="rule">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
+    <div class="term-reasons">
+        {{#each reasons}}
+        <span class="reasons">{{.}}</span> {{#unless @last}}&laquo;{{/unless}}
         {{/each}}
     </div>
 
