Remove dictionary delete button

--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -1,12 +1,14 @@
 <div class="dict-group well well-sm" data-title="{{title}}">
-    <div class="row">
-        <div class="col-xs-8">
-            <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
-        </div>
-        <div class="col-xs-4 text-right disabled">
-            <button type="button" class="dict-group-controls dict-delete btn btn-danger">Delete</button>
-        </div>
-    </div>
+    <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
+
+    <!-- <div class="row"> -->
+    <!--     <div class="col-xs-8"> -->
+    <!--         <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4> -->
+    <!--     </div> -->
+    <!--     <div class="col-xs-4 text-right disabled"> -->
+    <!--         <button type="button" class="dict-group-controls dict-delete btn btn-danger">Delete</button> -->
+    <!--     </div> -->
+    <!-- </div> -->
 
     <div class="dict-delete-progress">
         Dictionary data is being deleted, please be patient...
