--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -71,10 +71,10 @@
                 </div>
 
                 <p class="help-block">
-                    Yomichan can import both bundled and custom (see the <a href="https://foosoft.net/projects/yomichan-import">Yomichan Import</a>
-                    page for details) dictionaries. Although it is also possible to delete unneeded dictionaries, this operation is <em>extremely slow</em> and it is often
-                    easier to disable them or simply <a href="#" id="dict-purge">purge the database</a>. Please make sure to
-                    wait for import and delete operations to complete before closing this page.
+                    Yomichan can utilize both bundled and custom (see the <a href="https://foosoft.net/projects/yomichan-import">Yomichan Import</a>
+                    page for details) dictionaries. You can disable dictionaries that you no longer wish to use, or you can simply
+                    <a href="#" id="dict-purge">purge the database</a> to delete everything. Please make sure to wait for import
+                    and delete operations to complete before closing this page.
                 </p>
 
                 <div id="dict-purge-progress" class="text-danger">Dictionary data is being purged, please be patient...</div>
