--- a/tmpl/term.html
+++ b/tmpl/term.html
@@ -35,9 +35,7 @@
             {{/each}}
         </ol>
         {{else}}
-        <p>
-            {{glossary.[0]}}
-        </p>
+        <p>{{glossary.[0]}}</p>
         {{/if}}
     </div>
 </div>
