--- a/tmpl/dictionary.html
+++ b/tmpl/dictionary.html
@@ -1,5 +1,5 @@
 <div class="dict-group well well-sm" data-title="{{title}}">
-    <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>v.{{version}}</small></h4>
+    <h4><span class="text-muted glyphicon glyphicon-book"></span> {{title}} <small>rev.{{revision}}</small></h4>
 
     <!-- <div class="row"> -->
     <!--     <div class="col-xs-8"> -->
