--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -12,22 +12,22 @@
                 <h1>Welcome to Yomichan!</h1>
             </div>
 
-            <p>Thank you for downloading this extension! I sincerely hope that it will assist you on your language learning journey.</p>
+            <p>Thank you for downloading this extension! I hope that Yomichan will help you on your language learning journey.</p>
 
             <div>
                 <h2>Quick Guide</h2>
 
                 <p>
-                    Please read the steps outlined below to get quickly get up and running with Yomichan. For complete documentation,
+                    Read the steps below to get up and running with Yomichan. For complete documentation,
                     visit the <a href="https://foosoft.net/projects/yomichan-chrome/" target="_blank">official homepage</a>.
                 </p>
 
                 <ol>
                     <li>Left-click on the <img src="../img/icon16.png" alt> icon to enable or disable Yomichan for the current browser instance.</li>
                     <li>Right-click on the <img src="../img/icon16.png" alt> icon and select <em>Options</em> to open the Yomichan options page.</li>
-                    <li>Import any dictionaries (bundled or custom) you wish to use for Kanji and term searches.</li>
+                    <li>Import any dictionaries (bundled or custom) you wish to use for Kanji and term searches; none are imported by default.</li>
                     <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
-                    <li>Resize the definitions window by dragging the bottom-left corner inwards or outwards.</li>
+                    <li>Resize the definitions window by dragging the bottom-left corner inwards or outwards to make it smaller or larger.</li>
                     <li>Click on Kanji in the definition window to view additional information about that character.</li>
                 </ol>
             </div>
