don't show add buttons till we know card state for #25

--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -1,7 +1,7 @@
 <div class="kanji-definition">
     <div class="action-bar" data-sequence="{{sequence}}">
         {{#if addable}}
-        <a href="#" title="Add Kanji" class="action-add-note disabled" data-mode="kanji" data-index="{{@index}}"><img src="{{root}}/img/add_kanji.png"></a>
+        <a href="#" title="Add Kanji" class="action-add-note pending disabled" data-mode="kanji" data-index="{{@index}}"><img src="{{root}}/img/add_kanji.png"></a>
         {{/if}}
     </div>
 
