show spinner when adding notes (resolves #25)

--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -16,3 +16,7 @@
         <link rel="stylesheet" href="{{root}}/css/frame.css">
     </head>
     <body>
+
+    <div class="spinner">
+        <img src="{{root}}/img/spinner.gif">
+    </div>
