checkbox for grouping term results

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -38,6 +38,10 @@
                 </div>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="group-term-results"> Group term results</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="show-advanced-options"> Show advanced options</label>
                 </div>
             </div>
