--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -1,7 +1,7 @@
 <div class="kanji-definition">
-    <div class="action-bar" data-sequence="{{sequence}}">
+    <div class="action-bar">
         {{#if addable}}
-        <a href="#" title="Add Kanji" class="action-add-note pending disabled" data-mode="kanji" data-index="{{@index}}"><img src="{{root}}/img/add_kanji.png"></a>
+        <a href="#" title="Add Kanji" class="action-add-note pending disabled" data-mode="kanji" data-index="{{@index}}"><img src="img/add_kanji.png"></a>
         {{/if}}
     </div>
 
