--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -42,9 +42,7 @@
             {{/each}}
         </ol>
         {{else}}
-        <p>
-            {{glossary.[0]}}
-        </p>
+        <p>{{glossary.[0]}}</p>
         {{/if}}
     </div>
 </div>
